--- a/Lab01/MainWindow.xaml
+++ b/Lab01/MainWindow.xaml
@@ -3,7 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Lab01"
         mc:Ignorable="d"
         Title="MainWindow" Height="334.6" Width="525">
     <Grid Name="MainGrid" Margin="0,0,0,-20">
@@ -17,20 +16,20 @@
         </Grid.RowDefinitions>
 
         <Label Grid.Row="0" FontSize="12" Content="Choose your birthday date" Margin="0,22,0,0" />
-        <DatePicker Name="datePicker1" IsDropDownOpen="True" SelectedDateFormat="Short" Grid.Row="1" SelectedDate="{Binding DateOfBirth, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="0,6,0,0"/>
+        <DatePicker SelectedDateFormat="Short" Grid.Row="1" SelectedDate="{Binding DateOfBirth, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="0,6,0,0"/>
 
-        <Button Content="Send date" Grid.Row="2" Grid.Column="0" Margin="10,5,416,0" Name="Send" Command="{Binding SendDate}" Height="33" VerticalAlignment="Top"/>
+        <Button Content="Send date" Grid.Row="2" Grid.Column="0" Margin="10,5,416,0" Command="{Binding SendDate}" Height="33" VerticalAlignment="Top"/>
         <StackPanel Grid.Row="3" Orientation="Horizontal">
             <Label Content="Your age is: " Margin="0,10,0,0"></Label>
             <TextBlock Width="100" Padding="15" Text="{Binding Path=User.Age, Mode=OneWay}"></TextBlock>
         </StackPanel>
         <StackPanel Grid.Row="4" Orientation="Horizontal">
             <Label Content="Zodiac sign (western variant): " Margin="0,10,0,0"></Label>
-            <TextBlock Width="100" Padding="15" Text="{Binding Path=User.Western_zodiac, Mode=OneWay}"></TextBlock>
+            <TextBlock Width="100" Padding="15" Text="{Binding Path=User.WesternZodiac, Mode=OneWay}"></TextBlock>
         </StackPanel>
         <StackPanel Grid.Row="5" Orientation="Horizontal">
             <Label Content="Zodiac sign (eastern variant): " Margin="0,10,0,0"></Label>
-            <TextBlock Width="100" Padding="15" Text="{Binding Path=User.Chineese_zodiac, Mode=OneWay}"/>
+            <TextBlock Width="100" Padding="15" Text="{Binding Path=User.ChineeseZodiac, Mode=OneWay}"/>
         </StackPanel>
     </Grid>
 </Window>
